// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator should render everything 1`] = `
<div
  className="c-loading-indicator__container"
>
  <div
    className="c-loading-indicator__box qa-loading-indicator"
  >
    <img
      alt=""
      className="c-loading-indicator__icon"
      src="/assets/images/spinner.svg"
    />
    <span
      className="c-loading-indicator__text"
    >
      Laden...
    </span>
  </div>
</div>
`;

exports[`LoadingIndicator should render with classname is-loadingf 1`] = `
<div
  className="c-loading-indicator__container is-loading"
>
  <div
    className="c-loading-indicator__box qa-loading-indicator"
  >
    <img
      alt=""
      className="c-loading-indicator__icon"
      src="/assets/images/spinner.svg"
    />
    <span
      className="c-loading-indicator__text"
    >
      Laden...
    </span>
  </div>
</div>
`;
